# RulosMutantes

./: CMakeLists.txt  README.md  RulosMutantes.amxd  rulos_tilde.cpp
mi/plaits/dsp/: dsp.h  voice.cc
mi/stmlib/dsp/: dsp.h
mi/stmlib/linker_scripts/: stm32h7xx_flash.ld  stm32h7xx_flash_application_large.ld
mi/stmlib/programming/jtag/: erase_h7xx.cfg
